--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
     "ci-test": "npm run newman-server",
     "newman-server": "cross-env-shell PORT=3001 \"npm run dropdb && run-p --race start newman-wait\"",
     "newman-wait": "wait-on http://localhost:3001/api && npm run newman",
-    "newman": "newman run ./tests/server.postman_collection.json --env-var host=http://localhost:3001",
+    "newman": "newman run ./tests/BeerStepAPItests.postman_collection.json --env-var host=http://localhost:3001",
     "dropdb": "node ./tests/dropdb.js"
   },
   "repository": {
@@ -38,4 +38,5 @@
     "npm-run-all": "^4.1.5",
     "wait-on": "^8.0.0"
   }
+  
 }
